8364343: Virtual Thread transition management needs to be independent of JVM TI

Co-authored-by: Alan Bateman <alanb@openjdk.org>
Reviewed-by: coleenp, dholmes, sspitsyn