src/java.base/share/classes/java/lang/VirtualThread.java
@@ -246,11 +246,11 @@ final class VirtualThread extends BaseVirtualThread {
                 @Hidden
                 @JvmtiHideEvents
                 public void run() {
-                    vthread.notifyJvmtiStart(); // notify JVMTI
+                    vthread.endFirstTransition();
                     try {
                         vthread.run(task);
                     } finally {
-                        vthread.notifyJvmtiEnd(); // notify JVMTI
+                        vthread.startFinalTransition();
                     }
                 }
             };
@@ -491,8 +491,9 @@ final class VirtualThread extends BaseVirtualThread {
     @ChangesCurrentThread
     @ReservedStackAccess
     private void mount() {
-        // notify JVMTI before mount
-        notifyJvmtiMount(/*hide*/true);
+        startTransition(/*is_mount*/true);
+        // We assume following volatile accesses provide equivalent
+        // of acquire ordering, otherwise we need U.loadFence() here.
 
         // sets the carrier thread
         Thread carrier = Thread.currentCarrierThread();
@@ -533,8 +534,9 @@ final class VirtualThread extends BaseVirtualThread {
         }
         carrier.clearInterrupt();
 
-        // notify JVMTI after unmount
-        notifyJvmtiUnmount(/*hide*/false);
+        // We assume previous volatile accesses provide equivalent
+        // of release ordering, otherwise we need U.storeFence() here.
+        endTransition(/*is_mount*/false);
     }
 
     /**
@@ -543,11 +545,11 @@ final class VirtualThread extends BaseVirtualThread {
      */
     @Hidden
     private boolean yieldContinuation() {
-        notifyJvmtiUnmount(/*hide*/true);
+        startTransition(/*is_mount*/false);
         try {
             return Continuation.yield(VTHREAD_SCOPE);
         } finally {
-            notifyJvmtiMount(/*hide*/false);
+            endTransition(/*is_mount*/true);
         }
     }
 
@@ -1401,23 +1403,34 @@ final class VirtualThread extends BaseVirtualThread {
         this.carrierThread = carrier;
     }
 
-    // -- JVM TI support --
+    // The following four methods notify the VM when a "transition" starts and ends.
+    // A "mount transition" embodies the steps to transfer control from a platform
+    // thread to a virtual thread, changing the thread identity, and starting or
+    // resuming the virtual thread's continuation on the carrier.
+    // An "unmount transition" embodies the steps to transfer control from a virtual
+    // thread to its carrier, suspending the virtual thread's continuation, and
+    // restoring the thread identity to the platform thread.
+    // The notifications to the VM are necessary in order to coordinate with functions
+    // (JVMTI mostly) that disable transitions for one or all virtual threads. Starting
+    // a transition may block if transitions are disabled. Ending a transition may
+    // notify a thread that is waiting to disable transitions. The notifications are
+    // also used to post JVMTI events for virtual thread start and end.
 
     @IntrinsicCandidate
     @JvmtiMountTransition
-    private native void notifyJvmtiStart();
+    private native void endFirstTransition();
 
     @IntrinsicCandidate
     @JvmtiMountTransition
-    private native void notifyJvmtiEnd();
+    private native void startFinalTransition();
 
     @IntrinsicCandidate
     @JvmtiMountTransition
-    private native void notifyJvmtiMount(boolean hide);
+    private native void startTransition(boolean is_mount);
 
     @IntrinsicCandidate
     @JvmtiMountTransition
-    private native void notifyJvmtiUnmount(boolean hide);
+    private native void endTransition(boolean is_mount);
 
     @IntrinsicCandidate
     private static native void notifyJvmtiDisableSuspend(boolean enter);
